    Transfer more fixes from branch 1.4 to branch 1.3
    Restore macOS capacity to turn window fullscreen encompassing several screens.
    Improve Fl_Copy_Surface under macOS
    Set OPTION_USE_SYSTEM_LIBPNG/JPEG off under macOS by default
    Have Fl_Pack::draw() call Fl_Group::init_sizes() on its parent group.
    CMake support of the Darwin+XQuartz test platform

  OKAMURA, Yasunobu (1):
    Fix JIS Keyboard dead keys


CHANGES IN FLTK 1.3.5					RELEASED: Mar 03 2019

Bug fixes and other improvements

	- Updated CHANGES for release, removed one wrong entry


CHANGES IN FLTK 1.3.5rc2				RELEASED: Feb 17 2019

Bug fixes and other improvements

	- Fix Xcode FLTK project for use under macOS 10.14


CHANGES IN FLTK 1.3.5rc1				RELEASED: Feb 11 2019

New features and enhancements (highlights)

	- Add support for macOS 10.13 "High Sierra" and 10.14 "Mojave".
	- Add FL/platform.H for compatibility with FLTK 1.4 and higher.
	- Improve OpenGL(3+) support.
	- Improve Cairo support and (CMake) Cairo detection.

Bug fixes and other improvements

        - Fix for STR 3473 (and its duplicate STR 3507) to restore configure-based
          builds on recent Linux/Unix distributions where the freetype-config
          command has been replaced by pkg-config.
	- Fix Fl_Tree::insert() with pos out ouf range (issue #18).
	- Fix Fl_GIF_Image Color Table handling (STR 3491).
	- Make sure not to access Fl_Menu_ widgets if the widget gets
	  deleted while the menu (pulldown) is open (STR 3503).
	- Fix CMake build (fluid) on case sensitive macOS file systems.
	- Windows/OpenGL: improve pixel format detection (STR 3119).
	- Add support for macOS 10.14 "Mojave": all drawing to windows is done
	  through "layer-backed views" when the app is linked to SDK 10.14.
	- MacOS platform: fix regression in macOS 10.13 where an unbundled app
	  had its system menu bar unresponsive.
	- MacOS 10.10 platform: Fl_Window::fullscreen() and fullscreen_off()